--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,80 +1,39 @@
-user craig staff;  # www-data;
-worker_processes auto;
-pid /usr/local/var/run/nginx.pid;
-
 events {
-	worker_connections 768;
-	# multi_accept on;
 }
 
 http {
+  default_type application/octet-stream;
 
-	##
-	# Basic Settings
-	##
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	# server_tokens off;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_prefer_server_ciphers on;
 
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
+  access_log /Users/craig/local/var/jade/access.log;
+  error_log /Users/craig/local/var/jade/error.log;
 
-	include /usr/local/etc/nginx/mime.types;
-	default_type application/octet-stream;
+  server {
+    listen 8080;
 
-	##
-	# SSL Settings
-	##
+    location = /game/session {
+      proxy_pass http://localhost:5000/session;
+      proxy_http_version 1.1;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_send_timeout 1h;
+      proxy_read_timeout 1h;
+    }
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-	ssl_prefer_server_ciphers on;
+    location /game/ {
+      proxy_pass http://localhost:5000/;
+      proxy_set_header X-Real-IP $remote_addr;
+    }
 
-	##
-	# Logging Settings
-	##
-
-	access_log /usr/local/var/log/nginx/access.log;
-	error_log /usr/local/var/log/nginx/error.log;
-
-	##
-	# Gzip Settings
-	##
-
-	gzip on;
-	gzip_disable "msie6";
-
-	# gzip_vary on;
-	# gzip_proxied any;
-	# gzip_comp_level 6;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-        ##
-        # Application Settings
-        ##
-
-        server {
-            location = /game/session {
-                proxy_pass http://localhost:5000/session;
-                proxy_http_version 1.1;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "Upgrade";
-                proxy_send_timeout 1h;
-                proxy_read_timeout 1h;
-            }
-            location /game/ {
-                proxy_pass http://localhost:5000/;
-                proxy_set_header X-Real-IP $remote_addr;
-            }
-            location / {
-                root /usr/local/var/jade/client;
-            }
-        }
-
+    location / {
+      root /Users/craig/local/var/jade/client;
+    }
+  }
 }
