use port 7755 by default; 5000 is used for something by macos

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,18 +7,19 @@ http {
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
+  keepalive_timeout 65;
 
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   ssl_prefer_server_ciphers on;
 
-  access_log /Users/craig/local/var/jade/access.log;
-  error_log /Users/craig/local/var/jade/error.log;
+  access_log access.log;
+  error_log error.log;
 
-  server {
+server {
     listen 8080;
 
     location = /game/session {
-      proxy_pass http://localhost:5000/session;
+      proxy_pass http://localhost:7755/session;
       proxy_http_version 1.1;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Upgrade $http_upgrade;
@@ -28,12 +29,12 @@ http {
     }
 
     location /game/ {
-      proxy_pass http://localhost:5000/;
+      proxy_pass http://localhost:7755/game/;
       proxy_set_header X-Real-IP $remote_addr;
     }
 
     location / {
-      root /Users/craig/local/var/jade/client;
+      root client;
     }
   }
 }
