--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -29,7 +29,7 @@ server {
     }
 
     location /game/ {
-      proxy_pass http://localhost:7755/game/;
+      proxy_pass http://localhost:7755/;
       proxy_set_header X-Real-IP $remote_addr;
     }
 
